// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VizSidebar.vue renders correctly when expanded 1`] = `
<div class="sidebar-page">
  <section class="sidebar-layout">
    <bsidebar-stub open="true" type="is-light" position="fixed" fullheight="true" cancancel="" oncancel="[Function]" scroll="clip">
      <div class="p-2 pt-3 pb-5">
        <div class="block">
          <div><a>
              <div class="logo"></div>
            </a></div>
          <bbutton-stub size="is-small" iconright="angle-left" nativetype="button" tag="button"></bbutton-stub>
        </div>
      </div>
    </bsidebar-stub>
  </section>
</div>
`;

exports[`VizSidebar.vue renders correctly when reduced 1`] = `
<div class="sidebar-page">
  <section class="sidebar-layout">
    <bsidebar-stub open="true" type="is-light" position="fixed" fullheight="true" cancancel="" oncancel="[Function]" scroll="clip" reduce="true">
      <div class="p-2 pt-3 pb-5">
        <div class="block">
          <div class="has-text-centered"><a>
              <div class="logo-symbol"></div>
            </a>
            <bbutton-stub size="is-small" iconright="angle-right" nativetype="button" tag="button"></bbutton-stub>
          </div>
        </div>
      </div>
    </bsidebar-stub>
  </section>
</div>
`;
